--- a/CookingMedia.Client/Views/Admin/Ingredient.cshtml
+++ b/CookingMedia.Client/Views/Admin/Ingredient.cshtml
@@ -6,7 +6,7 @@
 @section Scripts
 {
     <script>
-        let url = new URL("http://localhost:5260/v1/ingredient");
+        let url = new URL("http://localhost:9876/api/ingredient");
         $("#searchBtn").on('click', () => search(url));
     </script>
 }
